Bring unsafe magic to TrendBarRingBuffer