@@ -9,18 +9,21 @@ version = '0.1'
 // base on ideas from LMAX Collections CoalescingBuffer
 description = 'Ring Buffer for Trendbar issue'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 repositories {
-    mavenLocal()
-    jcenter()
+  mavenLocal()
+  jcenter()
 }
 
 dependencies {
-    compile group: 'com.google.guava', name: 'guava', version: '15.0'
+
 }
 
 sourceSets {
-    main.java.srcDirs 'src'
-    test.java.srcDir 'perf-test'
+  main.java.srcDirs 'src'
+  test.java.srcDir 'perf-test'
 }
 
 sourceSets.main.output.classesDir = 'classes'
@@ -28,22 +31,19 @@ sourceSets.test.output.classesDir = 'test-classes'
 
 
 test {
-    minHeapSize = "226m"
-    maxHeapSize = "512m"
-    jvmArgs "-XX:MaxPermSize=128m"
-    testLogging.showStandardStreams = true
+  testLogging.showStandardStreams = true
 }
 
-task benchmark(description: '') {
-
-    doLast() {
-        def commandScript = "java -cp test-classes/:classes/ ru.collections.trendbar.BenchmarkRunner"
-        def process = ["/bin/bash", "-s"].execute()
-        process.withWriter { it.write(commandScript) }
-        process.consumeProcessOutput(System.out, System.err)
-        def code = process.waitFor()
-        println """benchmark exit code ${code}"""
-    }
+task benchmark(type: Test) {
+  jvmArgs "-XX:MaxPermSize=256m"
+  doLast() {
+    def commandScript = "java -server -XX:+AggressiveOpts -XX:+UseCondCardMark -XX:CompileThreshold=100000 -cp test-classes/:classes/ ru.collections.trendbar.BenchmarkRunner"
+    def process = ["/bin/bash", "-s"].execute()
+    process.withWriter { it.write(commandScript) }
+    process.consumeProcessOutput(System.out, System.err)
+    def code = process.waitFor()
+    println """benchmark exit code ${code}"""
+  }
 }
 
 benchmark.dependsOn compileTestJava
